--- a/src/templates/partials/icons.njk
+++ b/src/templates/partials/icons.njk
@@ -1,55 +1,63 @@
 {# SVG 图标库 #}
 {# 使用方法: {% include "partials/icons.njk" %} 后调用对应的宏 #}
 {# 编辑图标 - 铅笔 #}
-    {% macro iconEdit(width=16, height=16, className="") %}
-        <svg class="icon {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false"> <path
-            fill="currentColor"
-            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zm2.92 2.83H5v-0.92l9.06-9.06.92.92L5.92 20.08zM20.71
-                7.04c.39-.39.39-1.02 0-1.41L18.37 3.29c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"/>
+{% macro iconEdit(width=16, height=16, className="") %}
+    <svg class="icon {{ className }}"
+         viewBox="0 0 24 24"
+         width="{{ width }}"
+         height="{{ height }}"
+         aria-hidden="true"
+         focusable="false">
+        <path fill="currentColor" d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zm2.92 2.83H5v-0.92l9.06-9.06.92.92L5.92 20.08zM20.71 7.04c.39-.39.39-1.02 0-1.41L18.37 3.29c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z" />
     </svg>
 {% endmacro %}
 {# 复制图标 - 双文档 #}
 {% macro iconCopy(width=16, height=16, className="") %}
-    <svg class="icon icon-copy {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false">
-        <path
-            fill="currentColor"
-            d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0
-                16H8V7h11v14z"></path>
+    <svg class="icon icon-copy {{ className }}"
+         viewBox="0 0 24 24"
+         width="{{ width }}"
+         height="{{ height }}"
+         aria-hidden="true"
+         focusable="false">
+        <path fill="currentColor" d="M16 1H4c-1.1 0-2 .9-2 2v12h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z">
+        </path>
     </svg>
 {% endmacro %}
 {# 完成图标 - 对勾 #}
 {% macro iconCheck(width=16, height=16, className="") %}
-    <svg class="icon icon-check {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false">
+    <svg class="icon icon-check {{ className }}"
+         viewBox="0 0 24 24"
+         width="{{ width }}"
+         height="{{ height }}"
+         aria-hidden="true"
+         focusable="false">
         <path fill="currentColor" d="M9 16.2l-3.5-3.5L4 14.2l5 5 11-11-1.4-1.4z"></path>
     </svg>
 {% endmacro %}
 {# GitHub 图标 #}
 {% macro iconGitHub(width=18, height=18, className="") %}
-    <svg class="{{ className }}" viewbox="0 0 98 96" width="{{ width }}" height="{{ height }}" aria-hidden="true">
-        <path
-            fill-rule="evenodd"
-            clip-rule="evenodd"
-            d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362
-                0-1.141-.08-5.052-.08-9.127-13.59
-                2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523
-                5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283
-                0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1
-                12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155
-                3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08
-                13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-            fill="currentColor"/>
+    <svg class="{{ className }}"
+         viewbox="0 0 98 96"
+         width="{{ width }}"
+         height="{{ height }}"
+         aria-hidden="true">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z" fill="currentColor" />
     </svg>
 {% endmacro %}
 {# Debug 图标 - 虫子 - 特殊样式 - 仅在开发环境使用 #}
 {% macro iconDebug(width=16, height=16, className="") %}
-    <span title="Debug" style="display: inline-flex; align-items: center; justify-content: center; cursor: help;">
-        <svg class="icon {{ className }}" viewBox="0 0 24 24" width="{{ width }}" height="{{ height }}" aria-hidden="true" focusable="false">
-            <path
-                fill="red"
-                d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41
-                    3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79
-                    2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6
-                    12h-4v-2h4v2zm0-4h-4v-2h4v2z"/>
+    <span title="Debug"
+          style="display: inline-flex;
+                 align-items: center;
+                 justify-content: center;
+                 cursor: help">
+        <svg class="icon {{ className }}"
+             viewBox="0 0 24 24"
+             width="{{ width }}"
+             height="{{ height }}"
+             aria-hidden="true"
+             focusable="false">
+            <path fill="red" d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 12h-4v-2h4v2zm0-4h-4v-2h4v2z" />
         </svg>
     </span>
 {% endmacro %}
